feat: persistence framework using sops
