# docs/swagger.yaml
@@ -34,9 +34,9 @@ definitions:
         type: string
       payment_extended_skey:
         $ref: '#/definitions/bursa.KeyFile'
-      payment_kvey:
-        $ref: '#/definitions/bursa.KeyFile'
       payment_skey:
+        $ref: '#/definitions/bursa.KeyFile'
+      payment_vkey:
         $ref: '#/definitions/bursa.KeyFile'
       stake_address:
         type: string
